--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/mypage.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/mypage.css
@@ -20,7 +20,8 @@
     height : 100px;
     line-height: 100px;
     color : #fff;
-    border-bottom: 1px solid #400040;
+    left: 20px;
+    border: 1px solid #400040;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     
@@ -34,6 +35,8 @@
     padding-left: 20px;
     color: #808080;
     border: 1px solid #808080;
+    
+    box-sizing: border-box;
 }
 .main-menu>li>a{
     background-color: #f4f4f4;
