--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/joinFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/joinFrm.css
@@ -1,213 +1,216 @@
 @charset "UTF-8";
 
-.join-all-wrap{
+*{
+    padding: 0;
+    margin: 0;
+    outline: none;
+}
+
+.join-wrapper{
     width: 1200px;
     margin: 0 auto;
 }
+
+.join-wrap{
+    padding: 60px 80px;
+    border: 1.5px soild #ebebeb;
+}
+
 .join-title{
     text-align: center;
 }
+
 .join-title>h2{
-    margin-top: 80px;
-    color: #503396;
+    color: #282828;
+    margin: 50px;
+    font-size: 28px;
+    font-weight: bold;
 }
 
-.join-box{
-    margin: 50px auto;
+.join-content{
+    margin: 10px auto;
+    margin-bottom: 50px;
+    padding-bottom: 40px;
     width: 650px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border-top: 1.5px solid black;
+    border-bottom: 1.5px solid #ebebeb;
 }
 
 tr>td:first-child{
-    font-size: 15px;
-    font-weight: 600;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 table{
 	margin : 0px auto;
+    margin-top: 30px;
 }
 
 tr>td:first-child>sup{
     color: red;
 }
 
-.inputBox{
-    margin-left: 40px;
-    height: 45px;
-    width: 350px;
-    border: 1px solid rgb(211, 211, 211);
-    border-radius: 5px;
+.input-text{
+    width: 365px;
+    height: 40px;
     box-sizing: border-box;
+    margin-left: 25px;
+    padding-left: 10px;
+    border-radius: 7px;
+    border: 1.5px solid #ebebeb;
+    font-size: 12px;
+    /* rgb(228, 229, 237) */
+}
+
+#idChkBtn{
+    width: 70px;
 }
 
 .comment{
+    font-size: 12px;
+    padding-left: 30px;
+    font-weight: bold;
+}
+
+.email-input-text{
+    width: 215px;
+    height: 40px;
+    box-sizing: border-box;
+    margin-left: 25px;
+    padding-left: 10px;
+    border-radius: 7px;
+    border: 1px solid #ebebeb;
+    font-size: 12px;
+}
+
+.join-content>table>tbody>tr>td{ 
+    padding: 12.5px 10px;
+}
+
+.join-content>table>tbody>tr>td>button{
+    margin-left: 10px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1.5px solid #503396;
+    color:#fff;
+    background-color: #503396;
+    cursor: pointer;
+    font-size: 0.75em;
+    width: 50px;
+}
+
+.join-content>table>tbody>tr:nth-child(6)>td:nth-child(2){
+    padding-left: 40px;
+}
+
+.join-content>table>tbody>tr:nth-child(7)>td:nth-child(2){
+    padding-left: 40px;
+}
+
+.timeEmail{
     position: absolute;
 }
 
-.join-box>table>tbody>tr>td{ 
-    padding: 20px 0px;
+.join-content>table>tbody>tr>td:last-child>.check_email{ 
+    font-size: 12px;
+    width: 70px;
 }
 
-.join-box>table>tbody>tr>td>button{ 
-    color:#503396;
-    border: 0px;
-    height: 45px;
-    border-radius: 5px;
-    cursor: pointer;
-    border: 1.8px solid  #503396;
-    background-color: white;
-}
-
-.join-box>table>tbody>tr:nth-child(6)>td:nth-child(2){
-    padding-left: 40px;
-}
-
-.join-box>table>tbody>tr:nth-child(7)>td:nth-child(2){
-    padding-left: 40px;
-}
-
-.btn-box{
-    width: 650px;
+.join-content>table>tbody>tr>td:last-child>#checkEmail{ 
+    width: 110px;
     margin: 0 auto;
 }
 
-.btn-box>button{
-    width: 640px;
-    background-color: #503396;
-    border: 0px;
-    height: 60px;
-    border-radius: 5px;
-    font-size: 18px;
-    color: white;
-    font-weight: 500;
-    cursor: pointer;
-    margin-bottom: 120px;
-}
-
-.agree-box>label{
-    color: #000;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 200%;
-}
-
-.agree-wrap{
-    border: 1px solid #503396;
-    width: 450px;
-    margin-left: 40px;
-    padding: 20px;
-}
-
-.agree-box>span{
-    float: right;
-    font-size: 12px;
-    color: #503396;
-    cursor: pointer;
-}
-
-.agree-box>.agreeCheck{
-    padding-left: 20px;
-}
-
-#agreeBox{
-    padding-left: 23px;
-}
-
-.inputBox{
-    padding-left: 10px;
-}
-
-.join-box>table>tbody>tr>td:last-child>.comment{ 
-    padding-left: 40px;
-    font-size: 13px;
-}
-
-.join-box>table>tbody>tr>td:last-child>#memberEmail{ 
-    width: 45%;
-}
-
-.join-box>table>tbody>tr>td:last-child>#checkEmail{ 
-    width: 20%;
-    margin: 0;
-}
-
 .birthDay{
-	width: 80px;
-	height: 50px;
-	border-radius: 15%;
+	width: 70px;
+	height: 40px;
+	border-radius: 10px;
 	font-size: 14px;
 }
 
 #email-time{
-    margin-left: 300px;
+    margin-left: 30px;
+    font-size: 12px;
+    color: red;
+    font-weight: bold;
+    padding-top: 5px;
 }
 
-/*모달*/
-.agreeModal-wrap{
-	display: none;
-    width: 100vw;
-    height: 115vh;
-    background-color: rgba(0,0,0,0.5);
-    position: fixed;
-    top: 0;
-    left: 0;
-    justify-content: center;
-    align-items: center;
-    z-index : 9000;
-    /*display: flex;*/
+.essential>span{
+    padding-left: 760px;
+    font-size: 12px;
+    color: #727585;
 }
 
-.agreeModal-title{
-	color: rgb(140, 0, 240);
+.essential>span>sup{
+    color: red;
 }
 
-.agreeModal-1{
-    background-color: #fff;
-    width: 800px;
-    min-width: 400px;
-    max-width: 650px;
-    height: 650px;
-    min-height: 400px;
-    max-height: 800px;
-    border-radius: 10px;
-}
-
-.agreeModal-top>h3{
-    margin: 0;
-    text-align: center;
-    margin-top: 40px;
-    margin-bottom: 25px;
-    color: rgb(140, 0, 240);
-}
-
-.agreeModal-content{
+.accordion{
+    width: 650px;
     margin: 0 auto;
-    width: 600px;
-    height: 450px;
-    overflow: auto;
 }
 
-.resetBtn{
-    width: 400;
-}
-
-.content{
-	font-weight: 400;
-}
-.resetBtn>button{
-    display: flex;
+.all-agree-content{
+    border-top: 1.5px solid #ebebeb;
+    text-align: left;
     margin: 25px auto;
-    border-radius: 5px;
-    border: none;
-    width: 130px;
-    height: 50px;
-    line-height : 50px;
-    justify-content: center;
-    background-color: white;
-    border: 1.8px solid rgb(140, 0, 240);
-    font-weight: 600;
-    color: rgb(140, 0, 240);
-    font-size: 15px;
+    padding-top: 25px;
+}
+
+#allAgreement_two{
+    font-size: 16px;
+    font-weight: bold;
+    color: #282828;
+}
+
+.accordion-body{
+    font-size: 0.7em;
+    max-height: 225px;
+    overflow: auto;
+    transition: max-height 0.2s ease-out;
+    padding-top: 30px;
+}
+
+input[type="checkbox"] {
+    width: 1.05rem;
+    height: 1.05rem;
+    border-radius: 50%;
+    border: 1px solid #999;
+    appearance: none;
     cursor: pointer;
+    /* transition: background 0.2s; */
+}
+
+label{
+    font-size: 12px;
+    color: #333333;
+}
+
+input[type="checkbox"]:checked {
+    background: #503396;
+    border: none;
+}
+
+.must{
+    color: red;
+}
+
+.btn-wrap{
+    width: 650px;
+    margin: 0 auto;
+}
+
+.btn-wrap>button{
+    width: 650px;
+    background: #503396;
+    border: 0px;
+    height: 60px;
+    border-radius: 5px;
+    font-size: 18px;
+    color: #FBFCFD;
+    font-weight: bold;
+    cursor: pointer;
+    margin-top: 50px;
+    margin-bottom: 40px;
 }
