--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/findId.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/findId.css
@@ -149,3 +149,96 @@ th:first-child, td:first-child {
     background: #351c6f;
     color: #fff;
 }
+
+.modal-wrapper{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* modal-wrap 숨기기 display:none */
+    display: block;
+}
+
+.ok-modal{
+    background-color: #fff;
+    width: 28vw;
+    height: 20.5vh;
+    min-width: 300px;
+    max-width: 400px;
+    min-height: 150px;
+    max-height: 200px;
+    margin: 350px auto;
+}
+
+.modal-content>h3{
+    color: #fff;
+    background-color: #503396;
+    padding: 15px 15px;
+    font-size: 1.0em;
+    line-height: 1.1;
+    display: flex;
+}
+
+/* .modal-wrapper .modal-top{
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 55px;
+} */
+
+.layer-content{
+    padding: 20px 0px 20px 20px;
+    font-size: 0.8em;
+    color: #444444;
+}
+
+.text-common{
+    padding-bottom: 5px;
+}
+
+.btn-wrapper{
+    padding: 10px 20px 0px 0px;
+    text-align: center;
+}
+
+.modal-content{
+    position: relative;
+}
+
+.okBtn{
+    margin-top: 10px;
+    width: 55px;
+    height: 30px;
+    color: #fff;
+    background: #503396;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.okBtn:hover{
+    background: #351c6f;
+    color: #fff;
+}
+
+.close-btn{
+    position: absolute;
+    top: 17px;
+    right: 20px;
+    width: 16px;
+    height: 15px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background: url(https://img.megabox.co.kr/static/pc/images/common/btn/btn-layer-close.png);
+    cursor: pointer;
+}
+
+.okBtn>a{
+    text-decoration: none;
+    color: #fff;
+}
