--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/menubar.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/menubar.css
@@ -4,10 +4,11 @@
     padding: 0;
     outline: none;
 }
+
 .menu{
     width: 200px; 
     margin: 100px 100px;
-    border-radius : 15px 15px 15px 15px:
+    border-radius : 15px 15px 15px 15px;
 }
 
 .menu ul{
