--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/mypage.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/mypage.css
@@ -7,7 +7,8 @@
 .menu{
     width: 200px; 
     margin: 100px 100px;
-    border-radius : 15px 15px 15px 15px:
+    border-radius : 15px 15px 15px 15px;
+    float: left;
 }
 
 .menu ul{
