--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/reset.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/reset.css
@@ -13,10 +13,10 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, button, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	/* border: 0; */
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+	/* vertical-align: baseline; */
     box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
