메뉴바 수정 커밋

--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/menubar.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/menubar.css
@@ -13,6 +13,11 @@
 .menu ul{
     list-style-type: none;
 }
+.menu ul>li>.on{
+	font-weight : bold;
+	color: #008040;
+	background-color: #fff;
+}
 #myBox>a{
 	background-color: #454545;
 	font-size : 20px;
