--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/deleteFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/deleteFrm.css
@@ -16,16 +16,12 @@
 }
 
 .mypage-header>h2{
-    padding: 30px 0 15px 0;
+    padding: 20px 0px 25px 0px;
     font-weight: bold;
     font-size: 28px;
     color: #222222;
 }
 
-.profile-title{
-    position: relative;
-    padding-bottom: 10px;
-}
 
 .profile-content>tbody>tr>th{
     background-color: #f7f8f9;
