--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/movieDetail.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/movieDetail.css
@@ -318,6 +318,7 @@ cursor: pointer;
     text-align: center;
     line-height: 84px;
     padding-right: 10px;
+
 }
 .infoWap2Top{
     position: relative;
@@ -329,7 +330,181 @@ cursor: pointer;
     bottom: 40px;
     color: lightgrey;
 }
+.starpoint>li{
+    padding-left: 10px;
+    list-style: none;
+}
+.star-wrap{
+    overflow: hidden;
+}
+.star-wrap>span{
+    float: left;
+    font-size: 30px;
+    color: gray;
 
+}
+.modal_content{
+    overflow: hidden;
+}
+.star-wrap1{
+    margin-top: 10px;
+    margin-left: 140px;
+    text-align: center;
+    float: left;
+}
+.modalStar-result{
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
+    width: 220px;
+}
+.modalClose{
+    overflow: hidden;
+}
+.modalCloseTit{
+    font-size: 18px;
+    float: left;
+    margin-top: 5px;
+    
+}
 
+.modal_content_tit{
+    margin-top: 10px;
+    font-size: 24px;
+    color: black;
+}
+.modalTxtArea{
+    margin-top: 10px;
+    background-color: #f8f8fa;
+    height: 140px;
+    border-radius: 5px;
+    
+}
+.modalTxtArea>textarea{
+    margin-top: 10px;
+    width: 420px;
+    height: 70px;
+    resize: none;
+    border-color: lightgray;
+}
+.modalWatchPointChk{
+    margin-top: 10px;
+    background-color: #f8f8fa;
+    height: 140px;
+    border-radius: 5px;
+    width: 480px;
+    height: 104px;
+}
+
+.modalContentBottom{
+    margin-top: 80px;
+    
+}
+.modalContentBottom>button{
+    width: 55px;
+    height: 36px;
+    border-radius: 5px;
+}
+.modalWatchPointChk{
+    display: flex;
+    align-items: center;
+}
+
+.modalWatchPointChk>div{
+    flex: auto;
+    
+}
+.modalWatchPointChk div p{
+    font-size: 18px;
+    color:#0f0f0f;
+    margin-bottom: 5px;
+}
+.moviePostWrap{
+    margin-top: 50px;
+}
+.moviePostWriteWrap{
+    margin-top: 30px;
+    height: 60px;
+}
+
+.moviePostText{
+    width: 960px;
+    height: 40px;
+    font-size: 15px;
+    padding-left: 20px;
+    padding-top: 10px;
+   border: 1px solid #f8f8fa;
+   border-top-left-radius: 5px;
+   border-bottom-left-radius: 5px;
+    display: inline-block;
+    
+}
+
+.moviePosttWrite{
+    display: inline-block;
+    width: 140px;
+    height: 40px;
+    background-color: #f8f8fa;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-align: center;
+    line-height: 40px;
+    position: absolute;
+    top: 0;
+}
+.moviePostImg>img{
+    width: 228px;
+    height: 340px;
+    border-radius: 10px;
+}
+
+.moviePostContentList{
+    width: 1148px;
+    margin-bottom: 50px;
+}
+.moviePostImg{
+   
+    position: relative;
+    width: calc(100% / 4);
+    float: left;
+    margin-bottom: 50px;
+}
+.moviePostImgContent{
+    width: 228px;
+    /*height: 150px;*/
+    box-sizing: border-box;
+    position: absolute;
+     bottom: 0;
+    border: 1px solid lightgrey;
+    border-top: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #fff;
+    padding: 10px 10px;
+}
+.moviePostImgContent a p{
+    padding: 10px 0;
+}
+
+.postMoreBtn{
+    width: 1100px;
+    height: 30px;
+}
+.moviePostImg{
+    display: none;
+}
+
+.previewTop>span:nth-child(1){
+    padding-right: 10px;
+    
+}
+.previewTop>span:nth-child(2){
+    padding-left: 10px;
+    border-left: 1px solid lightgrey;
+}
+
+.previewWrap{
+    margin-top: 50px;
+}
 
 
