--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/myProfile.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/myProfile.css
@@ -9,13 +9,18 @@
 }
 
 .wrapper{
-	min-height: calc(100vh - 210px);
+	min-height: calc(100vh - 0px);
     width: 1200px;
+    position: relative;
 }
 
 .mypage-wrap{
-    margin: 0 auto;
+	margin: 0 auto;
     padding-top: 80px;
+    width: 100vh;
+    position: absolute;
+    left: 450px;
+    height: 100vh;
 }
 
 .mypage-header>h2{
@@ -182,7 +187,7 @@ th:first-child, td:first-child {
 
 .profile-essential{
     position: absolute;
-	left: 1170px;
+	left: 770px;
     top: 10px;
 }
 
@@ -215,7 +220,7 @@ sup{
 #cancelBtn{
     position: absolute;
     top: 10px;
-    left: 680px;
+    left: 300px;
     width: 75px;
     height: 45px;
     border-radius: 10px;
@@ -235,7 +240,7 @@ sup{
 #enrollBtn{
     position: absolute;
     top: 10px;
-    left: 780px;
+    left: 400px;
     width: 75px;
     height: 45px;
     border-radius: 10px;
