--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/deleteFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/deleteFrm.css
@@ -54,6 +54,7 @@
 
 .label-comment{
     font-size: 16px;
+    cursor: pointer;
 }
 
 .select>li{
@@ -93,7 +94,7 @@ th:first-child, td:first-child {
 .input-text{
     width: 300px;
     height: 30px;
-    font-size: 16px;
+    font-size: 1.1em;
     margin-left: 7px;
     padding-left: 7px;
 }
