--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/findId.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/findId.css
@@ -152,6 +152,7 @@ th:first-child, td:first-child {
 
 .modal-wrapper{
     width: 100%;
+    height: 1400px;
     background-color: rgba(0,0,0,0.5);
     position: absolute;
     top: 0;
