--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/admin/adminGift/adminGift.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/admin/adminGift/adminGift.css
@@ -18,3 +18,9 @@
 
 /* 추가되는 이미지 사이즈 설정 */
 #imgTd{ display: flex; width: 100%; height: 100%; }
+
+
+/* 이미지 미리보기 삭제기능 */
+#sortable { display: flex; }
+.imgLi { position: relative; list-style: none; }
+.imgLi>button { position: absolute;top: 0; right: 0; z-index: 10; }
