--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/moviePostFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/moviePostFrm.css
@@ -40,13 +40,18 @@
 }
 .postLeftSideContent{
     width: 530px;
-    height: 630px;
-    border: 1px solid lightgray;
+   
+    border: 1px solid #fff;
     text-align: center;
     margin-top: 20px;
-    padding:20px 0;
+    padding-top: 20px;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+   
+   
 }
-.postLeftSideContent>span button{
+.postLeftSideContent>.tab>a button{
     background-color: transparent;
     color: #fff;
     padding-bottom: 5px;
@@ -71,9 +76,9 @@
    padding-top: 10px;
 }
 .postRightSideContent{
-    width: 530px;
+    width: 528px;
     height: 392px;
-    border: 1px solid lightgray;
+  box-sizing: border-box;
     text-align: center;
     margin-top: 20px;
     padding:10px 0;
@@ -102,6 +107,31 @@ padding-bottom: 20px;
 .postLeftSideSel{
     margin-top: 20px;
     border: 1px solid lightgray;
+    height: 525px;
+    overflow: auto;
+    background-color: #fff;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+
 }
+
+.moviePostBottomBtn{
+    text-align: center;
+    margin-top: 50px;
+}
+.moviePostBottomBtn div{
+    display: inline-block;
+}
+.moviePostBottomBtn button{
+    width: 86px;
+    height: 46px;
+}
+.moviePostBottomBtn>.moviePostEnrollBtn{
+    margin-right: 20px;
+
+}
+
 
 
