--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/moviePostFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/moviePostFrm.css
@@ -74,6 +74,8 @@
     color: #fff;
    font-size: 18px;
    padding-top: 10px;
+   position: relative;
+   overflow: auto;
 }
 .postRightSideContent{
     width: 528px;
@@ -83,6 +85,7 @@
     margin-top: 20px;
     padding:10px 0;
     background-color: #503396;
+   
 }
 
 .postRightSideSel{
@@ -95,6 +98,9 @@ padding-bottom: 20px;
 .postRightSideBtn{
     padding-top: 30px;
     text-align: center;
+    position: absolute;
+    bottom: 5px;
+    left: 35%;
 }
 .postRightSideBtn>button{
     border: 2px dashed lightgrey;
@@ -134,6 +140,6 @@ padding-bottom: 20px;
 }
 .innerBtnWrap{
     margin-top: 50px;
-}
 
+}
 
