--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/gift/giftMain.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/gift/giftMain.css
@@ -1,3 +1,12 @@
+/* GIFT NAVI area */
+.page-util { display: block; position: static; width: 100%; height: 42px; background-color: #f8f8fa; box-sizing: border-box; margin-top: 49px; }
+.page-util .inner-wrap { width: 1200px; margin: 0 auto; }
+.page-util .location { display: flex; align-items: center; }
+.page-util .location span { overflow: hidden; display: block; width: 13px; height: 100%; margin: 0; padding: 0; text-indent: -9999px; background: url(https://img.megabox.co.kr/static/pc/images/common/bg/bg-location-home.png) no-repeat center; }
+.page-util .location a { display: block; position: relative; height: 42px; margin: 0 0 0 25px; padding: 0; line-height: 42px; color: #666; }
+.page-util .location a::before { content: ''; display: block; position: absolute; left: -14px; top: 0; width: 5px; height: 42px; background: url(https://img.megabox.co.kr/static/pc/images/common/bg/bg-location-arr.png) no-repeat left center; }
+
+.gift-wrap { width: 1200px; margin: 0 auto; }
 
 /* 스토어 내 폰트 색상 */
 .color-mt { color: mediumturquoise; }
@@ -25,11 +34,20 @@ input[name=store_nav_ct]:checked~label { font-weight: 900; border: 1px solid #50
 .gift-more { background: none; }
 
 /* 스토어 내부 컨탠츠 */
-.gift-items { margin-top: 50px; }
-.item { width: 245px; border: 1px solid #503396; height: 435px; border-radius: 10px;}
+a { color: #000; }
+.gift-items {display: flex; margin: 50px 0px; }
+.item { width: 245px; margin: 20px; border: 1px solid #ddd; height: 435px; border-radius: 10px;}
+.item:hover { border: 1px solid #503396;}
 .item-img>img { width: 243px; height: 245px; border-radius: 10px; }
 .item-info { padding: 20px; position: relative; height: 190px; }
 .item-info > div:first-of-type { border-bottom: 1px solid #ddd; height: 100px;}
 .item-title { font-size: 16px; margin-bottom: 10px; }
 .item-content { font-size: 12px; font-weight: 200;}
 .item-price { position: absolute; bottom: 20px; left: 20px; font-size: 20px; font-weight: 200; }
+
+/* 상품섹션 */
+.head-title { border-bottom: 1px solid #555; padding: 42px 0 15px; }
+.head-title h1 { font-size: 1.7rem; margin-bottom: 10px; }
+.head-title h2 { font-size: 1.2rem; }
+
+.product-control { margin-top: 10px; }
