--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/movieDetail.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/movieDetail.css
@@ -550,6 +550,9 @@ cursor: pointer;
 ::-webkit-scrollbar-track:hover {
     background-color: #eee;
 }
+.modal_content3::-webkit-scrollbar {
+    display: none;
+    }
 
 .moviePostImgContent a p{
     padding: 10px 0;
@@ -615,8 +618,69 @@ cursor: pointer;
     justify-content: space-between;
 }
 .post-detail-top{
-    width: 798px;
+    margin-top: 10px;
+    width: 100%;
     height: 113px;
     border: 1px solid lightgray;
+
+}
+.detail-top-r{
+    overflow: hidden;
+    padding-top: 20px;
+    padding-left: 20px;
+    margin-bottom: 10px;
+  
+}
+.detail-top-r-img{
+    float: left;
 }
 
+.post-info{
+    color: black;
+    float: left;
+    height: 67px;
+    margin-left: 10px;
+    text-align: left;
+}
+.subscribe{
+    padding-top: 15px;
+    display: flex;
+    justify-content: end;
+    padding-right: 20px;
+}
+.subscribe>.subscribeBtn{
+    width: 70px;
+    height: 28px;
+    background-color: #432e75;
+    color: #fff;
+    border-radius: 5px;
+    border: none;
+}
+.modalClose{
+    background-color: #432e75;
+    color: #fff;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+.post-detail-center{
+    margin-top: 10px;
+    width: 100%;
+}
+.detail-center-img-area{
+    padding-top: 20px;    
+    height: 500px;
+    background-color: #ecf0f4;
+    overflow: auto;
+}
+.detail-center-img-area>.post-detail-center-img{
+    width: 420px;
+    height: 320px;
+}
+.post-detail-content{
+    padding-top: 20px;
+    color: #0f0f0f;
+}
+.video-img{
+    display:flex;
+    align-items: stretch;
+}
