--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/gift/giftMain.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/gift/giftMain.css
@@ -50,4 +50,37 @@ a { color: #000; }
 .head-title h1 { font-size: 1.7rem; margin-bottom: 10px; }
 .head-title h2 { font-size: 1.2rem; }
 
-.product-control { margin-top: 10px; }
+/* images */
+.product-control { display: flex; margin-top: 30px; border-bottom: 1px solid #d8d9db; }
+.product-control .images { text-align: center; }
+.images { width: 480px; }
+#selected-image { width: 100%; }
+#selected-image > img { max-width: 400px; max-height: 400px; }
+#preview { display: flex; height: 120px; justify-content: space-between; align-items: center; }
+#preview .prev-img-container { width: 100px; height: 100px; display: flex; align-items: center; justify-content: center; }
+#preview .prev-img-container img { max-width: 80px; max-height: 80px; }
+/* infomation */
+.right-info { padding-left: 130px; width: 720px; }
+.right-info > div { padding: 10px 0; }
+.productInfo { border-bottom: 1px solid #ddd; }
+.right-info h2 { font-size: 1rem; margin-top: 10px; }
+.right-info h2 span { font-size: 0.8rem; color: #555; }
+.right-info table { font-size: 0.8rem; margin: 10px 0 10px; }
+.right-info table tr { height: 30px; }
+.right-info table th { width: 100px; text-align-last: left; }
+.deliveryInfo { border-bottom: 1px solid #ddd   ; }
+.deliveryInfo > table .deliveryNotice { padding-left: 20px; width: 100%; background-color: #eee; height: 40px; line-height: 40px; }
+.productInfo .category-anc {  }
+
+#productOption { width: 450px; height: 40px; }
+#option-select-tr {  }
+.selected-option { display: flex; align-items: center; justify-content: space-around; border: 1px solid #ddd; border-top: none; box-sizing: border-box; height: 40px; }
+
+.opt { width: 40%; }
+.amount { width: 25%; text-align: center; }
+.price { }
+.price button { background: none; height: 20px; width: 20px; border: 1px solid #ccc; border-radius: 5px; background: #fff url("/resources/images/gift/x-mark.png") 0 0 no-repeat;  background-size:  cover; text-indent: -9999px; cursor:pointer }
+/* 증감버튼 */
+.quantity { height: 28px; display: flex; align-items: center; justify-content: space-around; width: 100px; border-radius: 5px; border: 1px solid #ccc; }
+.quantity input { border: none; background-color: transparent; width: 25%; padding-left: 15px; font-size: 1.2rem; font-weight: 600; }
+.quantity button { background-color: transparent; border: none; cursor: pointer; font-size: 1.5rem; font-weight: bold; }
