--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/menubar.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/menubar.css
@@ -6,7 +6,7 @@
 }
 .menu{
     width: 200px; 
-    margin: 100px 100px;
+/*     margin: 100px 100px; */
     border-radius : 15px 15px 15px 15px;
 }
 
