소셜로그인 타입 별 분리완료 및 로그아웃 구현완료
일반회원 : 0
카카오회원 : 1
네이버회원 : 2

--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/joinFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/joinFrm.css
@@ -7,7 +7,7 @@
 }
 
 .join-wrapper{
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -169,7 +169,7 @@ label{
 }
 
 .accordion-body{
-    font-size: 0.7em;
+    font-size: 1.0em;
     max-height: 225px;
     overflow: auto;
     transition: max-height 0.2s ease-out;
