--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/joinFrm.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/member/joinFrm.css
@@ -64,6 +64,7 @@ tr>td:first-child>sup{
 
 #idChkBtn{
     width: 65px;
+    font-size: 0.9em;
 }
 
 .comment{
@@ -141,7 +142,7 @@ label{
 }
 
 .essential>span{
-    padding-left: 760px;
+    padding-left: 850px;
     font-size: 12px;
     color: #727585;
 }
@@ -232,10 +233,15 @@ input[type="checkbox"]:checked {
     display: block;
 }
 
+#instDate{
+	padding-top: 12px;
+	font-size: 1.2em;
+}
+
 .ok-modal{
     background-color: #fff;
     width: 28vw;
-    height: 20.5vh;
+    height: 14.5vh;
     min-width: 300px;
     max-width: 400px;
     min-height: 150px;
@@ -268,6 +274,8 @@ input[type="checkbox"]:checked {
 }
 
 .text-common{
+	font-size: 1.3em;
+    margin-top: 3px;
     padding-bottom: 5px;
     display: flex;
     justify-content: center;
