--- a/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/gift/giftMain.css
+++ b/gitfinalProject/04_filnalProject/src/main/webapp/resources/css/gift/giftMain.css
@@ -75,12 +75,50 @@ a { color: #000; }
 #productOption { width: 450px; height: 40px; }
 #option-select-tr {  }
 .selected-option { display: flex; align-items: center; justify-content: space-around; border: 1px solid #ddd; border-top: none; box-sizing: border-box; height: 40px; }
-
 .opt { width: 40%; }
 .amount { width: 25%; text-align: center; }
 .price { }
-.price button { background: none; height: 20px; width: 20px; border: 1px solid #ccc; border-radius: 5px; background: #fff url("/resources/images/gift/x-mark.png") 0 0 no-repeat;  background-size:  cover; text-indent: -9999px; cursor:pointer }
+.price button { background: none; height: 20px; width: 20px; background: url("/resources/images/gift/x-mark.png") 0 0 no-repeat;  background-size:  cover; text-indent: -9999px; cursor: pointer; border: none; }
+
+/* btn 구매하기 / 좋아요 / 장바구니 */
+.product-btn-box  { display: flex; justify-content: space-between; align-items: center; width: 450px; }
+.product-btn-box button { height: 60px; margin: 0px 1.5px; padding: 0; box-sizing: border-box; background: #fdfdfd; flex-grow: 1; }
+.product-btn-box button:first-of-type { flex-grow: 3; background-color: #000; border: none; color: #fff; }
+.product-btn-box button:first-of-type:hover { background-color: #333; border: none; color: #fff; }
+.product-btn-box button:hover { cursor: pointer; border: 1px solid #000; color: #000; }
+/* 좋아요 / 장바구니 활성화 클래스 */
+.addLike { background-color: #fd0000 !important; color: #fdfdfd; border: #fd0000 !important; }
+.addCart { background-color: #000 !important; color: #fdfdfd; }
+.addCart:hover { background-color: #555 !important; color: #fff !important; border: 1px solid #555 !important; }
+
 /* 증감버튼 */
 .quantity { height: 28px; display: flex; align-items: center; justify-content: space-around; width: 100px; border-radius: 5px; border: 1px solid #ccc; }
 .quantity input { border: none; background-color: transparent; width: 25%; padding-left: 15px; font-size: 1.2rem; font-weight: 600; }
 .quantity button { background-color: transparent; border: none; cursor: pointer; font-size: 1.5rem; font-weight: bold; }
+
+/* 주문서 결제 페이지 */
+.order { min-height: 500px; } 
+.top-area { display: flex; justify-content: space-between; align-items: center;  padding: 30px 0 10px; border-bottom: 1px solid #ddd; }
+.top-area h1 { font-size: 1.2rem; }
+.top-area p { font-size: 0.8rem; font-weight: 600; color: #999; }
+.top-area p span { color: #000; margin: 0 5px; }
+
+.info h2 { font-size: 1.2rem; margin: 30px 0 5px; }
+
+/* table 공통요소 */
+.order table { width: 100%; }
+.order table tr { border: 1px solid #ddd; border-bottom: none; }
+.order table tr:last-of-type { border-bottom: 1px solid #ddd; }
+.order table th { height: 45px; }
+
+.product-info-row { }
+.product-info td { text-align: center; }
+.product-info td:first-of-type { text-align: left; }
+.product-info-row > img { max-height: 90px; float: left; margin: 10px; }
+.product-info-row > div { float: left; height: 110px; padding: 10px; width: 85%; }
+.product-info-row > div > p { margin: 10px 0; }
+.product-option-info { height: 30px; width: 100; line-height: 30px; background-color: #f5f5f5; padding-left: 10px; border: 1px solid #ddd; }
+
+/* 배송안내사항 */
+.shpping-info2 { margin: 65px 0 30px; }
+.shpping-info2 li { color: #999; line-height: 1.5rem; }
